feat: Add terraform demo

--- a/.envrc
+++ b/.envrc
@@ -9,3 +9,5 @@ eval "$(devbox generate direnv --print-envrc)"
 # for more details
 
 export KUBECONFIG=kairos-kind.kubeconfig
+
+source_env_if_exists .envrc.local
