feat: Split bootstrap and final images for testing upgrades

--- a/dockerfiles/Dockerfile.bootstrap
+++ b/dockerfiles/Dockerfile.bootstrap
@@ -5,4 +5,4 @@ ARG BASE_IMAGE_REGISTRY
 
 FROM "${BASE_IMAGE_REGISTRY}/base-image:${BASE_IMAGE_VERSION}"
 
-RUN echo 'final' >/etc/kairos-test-version
+RUN echo 'bootstrap' >/etc/kairos-test-version
