--- a/dockerfiles/Dockerfile.base
+++ b/dockerfiles/Dockerfile.base
@@ -2,12 +2,15 @@
 
 ARG BASE_IMAGE=ubuntu:24.04
 
-FROM quay.io/kairos/kairos-init:v0.7.0 AS kairos-init
+FROM quay.io/kairos/kairos-init:v0.6.2 AS kairos-init
 
 FROM ${BASE_IMAGE} AS base-kairos
 ARG VERSION
 RUN --mount=type=bind,from=kairos-init,src=/kairos-init,dst=/kairos-init /kairos-init --level debug --version "${VERSION}"
-RUN apt update
-RUN apt install -y software-properties-common
-RUN add-apt-repository universe
-RUN apt install -y ubuntu-advantage-tools
+
+RUN --mount=type=secret,id=ubuntu-pro-token pro attach "$(cat /run/secrets/ubuntu-pro-token)"
+RUN pro status
+RUN pro enable usg
+RUN apt install usg
+RUN usg fix cis_level1_server
+RUN apt install -y rsync
