--- a/cloud-config.yaml
+++ b/cloud-config.yaml
@@ -14,12 +14,19 @@ users:
     - github:jimmidyson
     - github:dkoshkin
     - github:yannickstruyf3
+    - github:supershal
 
 install:
   device: "auto"
   reboot: true
   poweroff: false
   auto: true
+  bundles:
+  - targets:
+      - run://run/initramfs/live/kubernetes-images-v1.34.1.tar
+      local_file: true
+
+fail_on_bundles_errors: true
 
 stages:
   initramfs.after:
