fix: embed kubernetes images

--- a/bundles/kubernetes-images/Dockerfile
+++ b/bundles/kubernetes-images/Dockerfile
@@ -3,4 +3,4 @@ FROM docker.io/mesosphere/nkp-image-builder:v2.17.0-rc.1 AS nib
 
 FROM scratch
 COPY run.sh /
-COPY --from=nib /opt/container-images/*.tar /opt/container-images/*.tar
+COPY --from=nib /opt/container-images/ /opt/container-images/
