--- a/dockerfiles/Dockerfile.base
+++ b/dockerfiles/Dockerfile.base
@@ -6,8 +6,6 @@ FROM quay.io/kairos/kairos-init:v0.6.2 AS kairos-init
 
 FROM ${BASE_IMAGE} AS base-kairos
 ARG VERSION
-RUN --mount=type=bind,from=kairos-init,src=/kairos-init,dst=/kairos-init 
-
 # RUN --mount=type=secret,id=ubuntu-pro-token pro attach "$(cat /run/secrets/ubuntu-pro-token)"
 # RUN pro status
 # RUN pro enable usg
@@ -15,22 +13,16 @@ RUN --mount=type=bind,from=kairos-init,src=/kairos-init,dst=/kairos-init
 # RUN usg fix cis_level1_server
 RUN apt update && apt install -y rsync
 
-RUN echo "overlay" >> /etc/modules-load.d/k8s.conf && \
-    echo "br_netfilter" >> /etc/modules-load.d/k8s.conf
-
-# Setup networking parameters
-RUN echo "net.bridge.bridge-nf-call-iptables=1" >> /etc/sysctl.d/k8s.conf && \
+RUN mkdir -p /etc/modules-load.d && \
+    mkdir -p /etc/sysctl.d && \
+    mkdir -p /etc/dracut.conf.d && \
+    echo "overlay" >> /etc/modules-load.d/k8s.conf && \
+    echo "br_netfilter" >> /etc/modules-load.d/k8s.conf && \
+    echo "net.bridge.bridge-nf-call-iptables=1" >> /etc/sysctl.d/k8s.conf && \
     echo "net.bridge.bridge-nf-call-ip6tables=1" >> /etc/sysctl.d/k8s.conf && \
-    echo "net.ipv4.ip_forward=1" >> /etc/sysctl.d/k8s.conf
+    echo "net.ipv4.ip_forward=1" >> /etc/sysctl.d/k8s.conf && \
+    echo 'omit_dracutmodules+=" iscsi iscsiroot "' > /etc/dracut.conf.d/no-iscsi.conf
 
-# Configure dracut to omit iSCSI modules that cause boot failures
-# This prevents the "iscsiroot requested but kernel/initrd does not support iscsi" error
-# Following the pattern from official Kairos examples for Ubuntu builds
-RUN mkdir -p /etc/dracut.conf.d && \
-echo 'omit_dracutmodules+=" iscsi iscsiroot "' > /etc/dracut.conf.d/no-iscsi.conf
 
-RUN /kairos-init --level debug --version "${VERSION}"
-RUN /kairos-init validate;
-
-# Clean up kairos-init binary
-RUN rm /kairos-init
+RUN --mount=type=bind,from=kairos-init,src=/kairos-init,dst=/kairos-init /kairos-init --level debug --version "${VERSION}"
+RUN --mount=type=bind,from=kairos-init,src=/kairos-init,dst=/kairos-init /kairos-init validate;
