fix: correct kuberentes ext file

--- a/bundles/kubernetes/Dockerfile
+++ b/bundles/kubernetes/Dockerfile
@@ -53,10 +53,10 @@ COPY 10-kubeadm.conf /extension/etc/systemd/system/kubelet.service.d/10-kubeadm.
 # Create systemd extension metadata
 RUN mkdir -p /extension/usr/lib/extension-release.d && \
     echo "ID=ubuntu" > /extension/usr/lib/extension-release.d/extension-release.kubernetes && \
-    echo "VERSION_ID=\"24.04\"" >> /extension/usr/lib/extension-release.d/extension-release.kubernetes
+    echo "VERSION_ID=24.04" >> /extension/usr/lib/extension-release.d/extension-release.kubernetes
 
-RUN mksquashfs /extension /kubernetes.sysext -comp xz
+RUN mksquashfs /extension /kubernetes.sysext.raw -comp xz
 
 FROM scratch
-COPY --from=extension-builder /kubernetes.sysext /kubernetes.sysext
+COPY --from=extension-builder /kubernetes.sysext.raw /kubernetes.sysext.raw
 COPY run.sh /
